resume/resume.css
a {
    color:#000 !important;
    font-size: 0.7em;
    text-decoration: none;
    background-color: #eee;
    padding: 5px;
    margin: 5px;
    border-radius:2px;
}
body {
    font-family: 'Roboto', sans-serif;
    margin:0px;
    overflow: hidden;
}
.content-container {
    display:flex;
    flex-direction: column;
    height: 100%;
}
header {
    padding:40px;
    transition: box-shadow 0.2s;
}
.alt-font {
    font-family: 'Raleway', sans-serif;
}
.header-content {
    width:100%;
    padding: 0px auto;
}
.title-name {
    font-weight: 800;
    font-size: 3em;
    text-align: center;
}
.title-tagline {
    font-style: italic;
    font-size: 0.95em;
    font-weight: 100;
    text-align: center;
    color: #111;
}
tiles {
    display: flex;
    flex-wrap: wrap;
    align-items: stretch;
    justify-content: space-around;
    align-content:flex-start;
    flex:1;
    width:100%;
    overflow-y:scroll;
}
tile {
    flex: 1;
    flex-grow: 0;
    flex-shrink: 0;
}
.tile-buffer {
    width: 500px;
    max-width: 80vw;
    padding:10px;
}
.tile-content {
    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.1), 
                0px 2px 4px 0px rgba(0, 0, 0, 0.2);
    padding:10px;
    margin: auto;
}
.tile-title {
    text-align: center;
    font-weight: 600;
    font-size: 1.5em;
    border-bottom: 1px solid #eee;
    padding-bottom: 7px;
}
.tile-body {
    padding: 15px;
    font-size: 1.25em;
}
.item {
    min-height: 50px;
    border-bottom: 1px solid #eee;
    padding: 15px 10px;
}
.item.last {
    border: none;
}
.item-title {
    font-family: Roboto, sans-serif;
    padding: 10px;
}
.item-notes {
    display:flex;
    font-style: italic;
    font-size: 0.9em;
    flex-wrap: wrap;
    user-select: none;
    cursor: default;
}
.item-notes span {
    font-family: monospace;
    margin:4px;
    padding: 4px;
    background-color:#def0e5;
    border-radius:2px;
    flex: 1;
    flex-grow: 0;
    white-space: nowrap;
}
.hover-float {
    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.3), 0px 0px 0px 0px rgba(0,0,0,0.6);
    transition: box-shadow 0.2s;
}
.hover-float:hover {
    box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.1), 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
}
.item-description {
    list-style-position: inside;
    font-size: 0.8em;
    color: #111;
    line-height:175%;
    padding:4px;
    margin:4px;
}
.item-links {
    margin:4px;
    padding:4px;
    display:flex;
    flex-wrap: wrap;
    justify-content: center;
}

